--- a/style.css
+++ b/style.css
@@ -1,5 +1,3 @@
-
-
  *
 {
     margin: 0;
@@ -14,22 +12,32 @@ body {
     justify-content: left;
     align-items: center;
     min-height: 100vh;
-    background: #cce7e1;
+    background: rgba(35, 43, 40, 0.7);
+    position: relative;
+}  
+body::before {
+    content: "";
+    position:absolute;
+    top:0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background: url(FormacionCCA.png)no-repeat center center/cover;
+    opacity: 50;
+    z-index: 0;
 
 }
 header { 
+    position: relative;
     text-align: center; 
     padding-top: 20px; 
- }
-
- h1{
+}
+h1{
     font-size: 6vw;
     color:white;
     margin: 0;
     text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.5);
-
-    
- }
+}
 
 .Lista {
     padding: 30px 75px 10px 30px;
