--- a/style.css
+++ b/style.css
@@ -1,5 +1,4 @@
- *
-{
+* {
     margin: 0;
     padding: 0;
     font-family: 'Courier New', Courier, monospace;
@@ -7,48 +6,68 @@
 }
 
 body {
+    height: 100vh;
     display: flex;
     flex-direction: column;
-    justify-content: left;
-    align-items:last baseline;
-    min-height: 100vh;
-    background: rgba(35, 43, 40, 0.7);
-    position: relative;
-  
-}  
-body::before {
-    content: "";
-    position:absolute;
-    top:0;
-    left: 0;
+    background: black;
+    color: white;
+}
+
+.Contenedor {
+    display: flex;
+    flex-direction: column;
     width: 100%;
     height: 100%;
-    background: url(FormacionCCA.png)no-repeat center center/cover;
-    opacity: 50;
-    z-index: 0;
+    background-color: #1892e4;
+}
 
+.cajatexto {
+    text-align: center;
+    color: #f5eded;
+    font-size: 3em;
+    margin: 20px 0;
+    padding: 10px;
+    width: 100%;
+    background: #0477ba;
 }
-header { 
-    position: relative;
-    text-align: center; 
-    padding-top: 20px; 
+
+.cajaContenido {
+    display: flex;
+    flex: 1;
+    justify-content: space-between;
+    align-items: flex-start;
+    width: 100%;
+    height: 100%;
 }
-h1{
-    font-size: 6vw;
-    color:white;
-    margin: 0;
-    text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.5);
+
+.cajaImagen {
+    flex: 1;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 100%;
+    padding: 20px;
+}
+
+img {
+    width: 100%;
+    height: auto;
+    border: 3px solid white;
+    border-radius: 10px;
 }
 
 .Lista {
-    padding: 30px 75px 10px 30px;
-    position: relative;
+    flex: 1;
+    padding: 20px;
+    margin: 20px; /* Agrega un margen alrededor de la lista */
     background: #04ab10;
-    border-top: 50px solid #dbf7f8;
-    opacity: 0.8;
-    
-    
+    border-top: 10px solid #dbf7f8;
+    border: 5px solid #ffffff; /* Añade un borde visible */
+    border-radius: 10px; /* Bordes redondeados */
+    height: 80%;
+    box-shadow: 0 4px 10px rgba(0, 0, 0, 0.3); /* Efecto de sombra */
 }
+
 
 .Lista h2 {
     color: #fff;
@@ -59,13 +78,16 @@ h1{
 }
 
 .Lista label {
-    position: relative;
     display: block;
     margin: 40px 0;
-    color: #fff;
+    color: #080808;
     font-size: 24px;
+    border: 3px;
+
     cursor: pointer;
+    position: relative;
 }
+
 .Lista input[type="checkbox"] {
     appearance: none;
 }
@@ -116,3 +138,4 @@ h1{
 .Lista input[type="checkbox"]:checked ~ span {
     color: #0477ba;
 }
+
